--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.9.1",
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
